--- a/templates/block/block--inline-block--content-list.html.twig
+++ b/templates/block/block--inline-block--content-list.html.twig
@@ -5,7 +5,7 @@
 */
 #}
 
-{#{ attach_library('boulderD9_base/ucb-content-list') }#}
+{{ attach_library('boulderD9_base/ucb-content-list') }}
 
 {% set blockContent = content['#block_content'] %}
 {% set sort = blockContent.field_content_list_sort.value %}
@@ -27,29 +27,31 @@
 	{{ title_prefix }}
 	{% if label %}<h2{{ title_attributes }}>{{ label }}</h2>{% endif %}
 	{{ title_suffix }}
-	{% if display == 'teaser' %}{% for key, item in blockContent.field_content_list_content if key|first != '#' %}<div class="row ucb-content-list-row">
-		<div class="col-9">
-			<h3 class="ucb-content-list-header"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></h3>
-			<p class="ucb-content-list-body">{{ item.entity.body.0.summary }}</p>
-		</div>
-		<div class="col-3">
-			{% set imageURI = item.entity.field_ucb_person_photo.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
-			{% set imageAlt = item.entity.field_ucb_person_photo.entity.field_media_image.alt|render %}
-			<img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}">
-		</div>
-	</div>{% endfor %}{% elseif display == 'embed' %}{% for key, item in blockContent.field_content_list_content if key|first != '#' %}<div class="row ucb-content-list-row">
-		<div class="col-2">
-			{% set imageURI = item.entity.field_ucb_person_photo.entity.field_media_image.entity.fileuri|image_style('focal_image_square') %}
-			{% set imageAlt = item.entity.field_ucb_person_photo.entity.field_media_image.alt|render %}
-			<img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}">
-		</div>
-		<div class="col-9">
-			<h4 class="ucb-content-list-header"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></h4>
-			<p class="ucb-content-list-body">{{ item.entity.body.0.summary }}</p>
-		</div>
-	</div>{% endfor %}{% elseif display == 'title' %}<ul>{% for key, item in blockContent.field_content_list_content if key|first != '#' %}
-		<li><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></li>
-	{% endfor %}</ul>
-	{% elseif display == 'sidebar' %}{# TODO Sidebar #}
-	{% endif %}
+	<div class="ucb-content-list-container">
+		{% if display == 'teaser' %}{% for key, item in blockContent.field_content_list_content if key|first != '#' %}<div class="row ucb-content-list-row">
+			<div class="col-9">
+				<h4 class="ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></h4>
+				{% set summary = item.entity.body.0.summary %}{% if summary %}<p class="ucb-content-list-summary">{{ summary }}</p>{% endif %}
+			</div>
+			{% set image = item.entity.field_ucb_person_photo.entity.field_media_image %}
+			<div class="ucb-content-list-image-container col-3{{ image ? '' : ' ucb-content-list-image-empty' }}">{% if image %}
+				{% set imageURI = image.entity.fileuri|image_style('focal_image_square') %}{% set imageAlt = image.alt|render %}
+				<img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}">
+			{% endif %}</div>
+		</div>{% endfor %}{% elseif display == 'embed' %}{% for key, item in blockContent.field_content_list_content if key|first != '#' %}<div class="row ucb-content-list-row">
+			{% set image = item.entity.field_ucb_person_photo.entity.field_media_image %}
+			<div class="ucb-content-list-image-container col-2{{ image ? '' : ' ucb-content-list-image-empty' }}">{% if image %}
+				{% set imageURI = image.entity.fileuri|image_style('focal_image_square') %}{% set imageAlt = image.alt|render %}
+				<img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}">
+			{% endif %}</div>
+			<div class="col-9">
+				<h4 class="ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></h4>
+				{% set summary = item.entity.body.0.summary %}{% if summary %}<p class="ucb-content-list-summary">{{ summary }}</p>{% endif %}
+			</div>
+		</div>{% endfor %}{% elseif display == 'title' %}<ul>{% for key, item in blockContent.field_content_list_content if key|first != '#' %}
+			<li class="ucb-content-list-row ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></li>
+		{% endfor %}</ul>
+		{% elseif display == 'sidebar' %}{# TODO Sidebar #}
+		{% endif %}
+	</div>
 </div>{% endblock content %}
