--- a/css/block/content-list.css
+++ b/css/block/content-list.css
@@ -1,9 +1,17 @@
-.ucb-content-list-display-teaser .ucb-content-list-row, .ucb-content-list-display-embed .ucb-content-list-row {
-	border-bottom: 1px solid rgba(20 20 20 / 20%);
+.ucb-content-list-display-teaser .ucb-content-list-row, .ucb-content-list-display-embed .ucb-content-list-row, .ucb-content-list-display-sidebar .ucb-content-list-row {
+	border-bottom: 1px solid rgba(20, 20, 20, .2);
+	padding: 20px 0;
+}
+
+.ucb-content-list-display-embed h2, .ucb-content-list-display-title h2, .ucb-content-list-display-sidebar h2 {
+	font-size: 1.3em;
+}
+
+.ucb-content-list-container {
 	margin-bottom: 20px;
 }
 
-.ucb-content-list-display-teaser .ucb-content-list-title, .ucb-content-list-display-embed .ucb-content-list-title {
+.ucb-content-list-title {
 	font-size: 1.25rem;
 	font-weight: bolder;
 	margin-bottom: 10px;
@@ -13,6 +21,19 @@
 	font-size: 1.2rem;
 }
 
+.ucb-content-list-display-title .ucb-content-list-title, .ucb-content-list-display-sidebar .ucb-content-list-title {
+	font-size: 1rem;
+	font-weight: 400;
+}
+
+.ucb-content-list-display-sidebar .ucb-content-list-title {
+	display: block;
+}
+
 .ucb-content-list-display-embed .ucb-content-list-image-empty {
 	display: none;
+}
+
+.ucb-content-list-image-container {
+	margin-bottom: 10px;
 }
