--- a/templates/block/block--inline-block--content-list.html.twig
+++ b/templates/block/block--inline-block--content-list.html.twig
@@ -44,13 +44,13 @@
 				{% set summary = item.entity.body.0.summary ?? item.entity.field_ucb_article_summary.0.value %}
 				<p class="ucb-content-list-summary">{{ summary }} <a href="{{ item.entity.path.alias }}">Read&nbsp;more&nbsp;&raquo;</a></p>
 			</div>
-			{% set image = item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_ucb_article_thumbnail.entity.field_media_image %}
+			{% set image = item.entity.field_ucb_article_thumbnail.entity.field_media_image ?? item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_how_to_initial_image.entity.field_media_image %}
 			<div class="ucb-content-list-image-container col-3{{ image ? '' : ' ucb-content-list-image-empty' }}">{% if image %}
 				{% set imageURI = image.entity.fileuri|image_style('focal_image_square') %}{% set imageAlt = image.alt|render %}
 				<a href="{{ item.entity.path.alias }}"><img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}"></a>
 			{% endif %}</div>
 		</div>{% endfor %}{% elseif display == 'embed' %}{% for key, item in content %}<div class="row ucb-content-list-row">
-			{% set image = item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_ucb_article_thumbnail.entity.field_media_image %}
+			{% set image = item.entity.field_ucb_article_thumbnail.entity.field_media_image ?? item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_how_to_initial_image.entity.field_media_image %}
 			<div class="ucb-content-list-image-container col-3{{ image ? '' : ' ucb-content-list-image-empty' }}">{% if image %}
 				{% set imageURI = image.entity.fileuri|image_style('focal_image_square') %}{% set imageAlt = image.alt|render %}
 				<a href="{{ item.entity.path.alias }}"><img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}"></a>
@@ -68,7 +68,7 @@
 			<div class="col-9">
 				<span class="ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></span>
 			</div>
-			{% set image = item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_ucb_article_thumbnail.entity.field_media_image %}
+			{% set image = item.entity.field_ucb_article_thumbnail.entity.field_media_image ?? item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_how_to_initial_image.entity.field_media_image %}
 			<div class="ucb-content-list-image-container col-3{{ image ? '' : ' ucb-content-list-image-empty' }}">{% if image %}
 				{% set imageURI = image.entity.fileuri|image_style('focal_image_square') %}{% set imageAlt = image.alt|render %}
 				<a href="{{ item.entity.path.alias }}"><img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}"></a>
