--- a/templates/block/block--inline-block--content-list.html.twig
+++ b/templates/block/block--inline-block--content-list.html.twig
@@ -29,7 +29,10 @@
 		'block-' ~ plugin_id|clean_class,
 		bundle ? 'block--type-' ~ bundle|clean_class,
 		view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
-		'ucb-content-list-display-' ~ display
+		'ucb-content-list',
+		'ucb-content-list-display-' ~ display,
+		display == 'teaser' ? 'background-gray-light',
+		display == 'sidebar' ? 'background-gray-dark'
 	]
 %}
 
@@ -40,7 +43,7 @@
 	<div class="ucb-content-list-container">
 		{% if display == 'embed' %}{% for key, item in content %}<div class="row ucb-content-list-row">
 			{% set image = item.entity.field_ucb_article_thumbnail.entity.field_media_image ?? item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_how_to_initial_image.entity.field_media_image %}
-			<div class="{{ image ? 'col-9' : 'container' }}">
+			<div class="ucb-content-list-text-container{{ image ? ' col-9' : ' container' }}">
 				<h4 class="ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></h4>
 				{% set summary = item.entity.body.0.summary ?? item.entity.field_ucb_article_summary.0.value %}
 				<p class="ucb-content-list-summary">{{ summary }} <a class="ucb-content-list-read-more" href="{{ item.entity.path.alias }}">Read more &raquo;</a></p>
@@ -55,18 +58,18 @@
 				{% set imageURI = image.entity.fileuri|image_style('focal_image_square') %}{% set imageAlt = image.alt|render %}
 				<a href="{{ item.entity.path.alias }}"><img class="ucb-content-list-image" src="{{ imageURI }}" alt="{{ imageAlt }}"></a>
 			{% endif %}</div>
-			<div class="{{ image ? 'col-9' : 'container' }}">
+			<div class="ucb-content-list-text-container{{ image ? ' col-9' : ' container' }}">
 				<h4 class="ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></h4>
 				{% set summary = item.entity.body.0.summary ?? item.entity.field_ucb_article_summary.0.value %}
 				<p class="ucb-content-list-summary">{{ summary }} <a class="ucb-content-list-read-more" href="{{ item.entity.path.alias }}">Read more &raquo;</a></p>
 			</div>
 		</div>{% endfor %}{% elseif display == 'title' %}
-		<ul>{% for key, item in content %}
+		<ul class="ucb-content-list-list">{% for key, item in content %}
 			<li class="ucb-content-list-row ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></li>
 		{% endfor %}</ul>
 		{% elseif display == 'sidebar' %}{% for key, item in content %}<div class="row ucb-content-list-row">
 			{% set image = item.entity.field_ucb_article_thumbnail.entity.field_media_image ?? item.entity.field_ucb_person_photo.entity.field_media_image ?? item.entity.field_how_to_initial_image.entity.field_media_image %}
-			<div class="{{ image ? 'col-9' : 'container' }}">
+			<div class="ucb-content-list-text-container{{ image ? ' col-9' : ' container' }}">
 				<span class="ucb-content-list-title"><a href="{{ item.entity.path.alias }}">{{ item.entity.title.0.value }}</a></span>
 			</div>
 			<div class="ucb-content-list-image-container{{ image ? ' col-3' : '' }}">{% if image %}
